# cartesian_ros_control

./: .rosinstall  CMakeLists.txt  LICENSE  README.md  cartesian_controller_plugins.xml  package.xml  pass_through_controllers_plugin.xml
.github/workflows/: industrial_ci_action.yml
LICENSES/: license.cpp
cartesian_control_msgs/: CMakeLists.txt  README.md  package.xml
cartesian_control_msgs/action/: FollowCartesianTrajectory.action
cartesian_control_msgs/msg/: CartesianPosture.msg  CartesianTolerance.msg  CartesianTrajectory.msg  CartesianTrajectoryPoint.msg
cartesian_ros_control/: CMakeLists.txt  package.xml
cartesian_trajectory_controller/: CMakeLists.txt  package.xml
cartesian_trajectory_controller/include/cartesian_trajectory_controller/: control_policies.h  control_policies.hpp
cartesian_trajectory_controller/test/: cartesian_trajectory_controller.test  test_controller.py
cartesian_trajectory_interpolation/include/cartesian_trajectory_interpolation/: cartesian_trajectory_segment.h
cartesian_trajectory_interpolation/src/: cartesian_trajectory_segment.cpp
cartesian_trajectory_interpolation/test/: cartesian_trajectory_segment_test.cpp
examples/config/: example_controllers.yaml  example_hw_config.yaml
examples/hw_interface/: control_node.cpp  controllers.yaml  hw_interface.cpp  hw_interface.h  hw_interface.launch
examples/launch/: demo.launch  examples.launch
examples/robot_dummy/: controllers.yaml  robot_dummy.launch
examples/script/: action_client.py
include/cartesian_ros_control/: cartesian_command_interface.h  cartesian_state_handle.h  twist_controller.h
include/pass_through_controllers/: pass_through_controller.h  pass_through_controller.hpp  pass_through_controllers.h  pass_through_controllers.hpp  trajectory_interface.h
pass_though_controllers/: CMakeLists.txt  README.md  package.xml
pass_though_controllers/include/pass_through_controllers/: pass_through_controllers.h  pass_through_controllers.hpp  trajectory_interface.h
pass_though_controllers/src/: pass_through_controllers.cpp
pass_though_controllers/test/: pass_through_controllers.test  test_forward_joint_trajectory.py
pass_though_controllers/test/hw_interface/: control_node.cpp  hw_interface.cpp  hw_interface.h
pass_through_controllers/: CMakeLists.txt  README.md  package.xml  pass_through_controllers_plugin.xml
pass_through_controllers/examples/cfg/: SpeedScaling.cfg
pass_through_controllers/examples/hw_interface/: config.yaml  hw_interface.cpp  hw_interface.h  hw_interface.launch
pass_through_controllers/examples/launch/: demo.launch
pass_through_controllers/examples/robot_dummy/: controllers.yaml  robot_dummy.launch
pass_through_controllers/examples/script/: cartesian_trajectory_action_client.py  joint_trajectory_action_client.py
pass_through_controllers/include/pass_through_controllers/: pass_through_controllers.h  pass_through_controllers.hpp  trajectory_interface.h
pass_through_controllers/src/: pass_through_controllers.cpp
pass_through_controllers/test/: test_forward_cartesian_trajectory.py  test_forward_joint_trajectory.py
pass_through_controllers/test/hw_interface/: hw_interface.h
pass_through_controllers/test/launch/: hw_interface.launch  robot.launch
src/: pass_through_controller.cpp  pass_through_controllers.cpp  twist_controller.cpp
test/: cartesian_command_interface_test.cpp  cartesian_state_interface_test.cpp
test/hw_interface/: control_node.cpp  controllers.yaml  hw_interface.cpp  hw_interface.h
test/launch/: setup.launch
