<?xml version="1.0"?>
<package format="2">
  <name>pass_through_controllers</name>
  <version>0.0.1</version>
  <description>
    Trajectory controllers (joint-based and Cartesian) that forward trajectories
    directly to a robot controller and let it handle trajectory interpolation and execution.
  </description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="scherzin@fzi.de">Stefan Scherzinger</maintainer>
  <maintainer email="exner@fzi.de">Felix Exner</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache-2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pass_through_controllers</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>cartesian_control_msgs</build_depend>
  <build_depend>cartesian_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>speed_scaling_interface</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cartesian_control_msgs</build_export_depend>
  <build_export_depend>cartesian_interface</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>speed_scaling_interface</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cartesian_control_msgs</exec_depend>
  <exec_depend>cartesian_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>speed_scaling_interface</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <test_depend>cartesian_trajectory_controller</test_depend>
  <test_depend>actionlib</test_depend>
  <test_depend>actionlib_msgs</test_depend>
  <test_depend>control_msgs</test_depend>
  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>

  <!-- This is important for the export to work -->
  <exec_depend>controller_interface</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <!-- Put the pass_through_controllers to the other ROS controllers.
    To check if the export was successful, use
    rospack plugins - -attrib=plugin controller_interface
    -->
    <controller_interface plugin="${prefix}/pass_through_controllers_plugin.xml"/>
  </export>
</package>
