<?xml version="1.0"?>
<package format="2">
  <name>cartesian_control_msgs</name>
  <version>0.0.1</version>
  <description>Cartesian trajectory execution interface.</description>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>Apache-2.0</license>


  <!-- <url type="website">http://wiki.ros.org/cartesian_control_msgs</url> -->

  <author email="exner@fzi.de">Felix Exner</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
